--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              <div class="row">
                 <label class="title">Options</label>
                 <ul class="options">
-                    <li class="option">
+                    <li class="option active">
                        <img src="icons/brush.svg" alt="">
                        <span>Brush</span>
                     </li>
@@ -49,18 +49,20 @@
                 </ul>
              </div>
 
-             <div class="row">
+             <div class="row colors">
                 <label class="title">Colors</label>
                 <ul class="options">
                     <li class="option"></li>
+                    <li class="option selected"></li>
                     <li class="option"></li>
                     <li class="option"></li>
-                    <li class="option"></li>
-                    <li class="option"></li>
+                    <li class="option">
+                     <input type="color" id="color-picker" value="#4A98F7">
+                    </li>
                 </ul>
              </div>
 
-             <div class="row">
+             <div class="row buttons">
                 <button class="clear-canvas">Clear Canvas</button>
                 <button class="save-img">Save As Image</button>
              </div>
