--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
              <div class="row">
                 <label class="title">shapes</label>
                 <ul class="options">
-                    <li class="option">
+                    <li class="option tool" id="rectangle">
                        <img src="icons/rectangle.svg" alt="">
                        <span>Rectangle</span>
                     </li>
-                    <li class="option">
+                    <li class="option tool" id="circle">
                         <img src="icons/circle.svg" alt="">
                         <span>Circle</span>
                      </li>
-                     <li class="option">
+                     <li class="option tool" id="triangle">
                         <img src="icons/triangle.svg" alt="">
                         <span>Triangle</span>
                      </li>
@@ -35,16 +35,16 @@
              <div class="row">
                 <label class="title">Options</label>
                 <ul class="options">
-                    <li class="option active">
+                    <li class="option active tool" id="brush">
                        <img src="icons/brush.svg" alt="">
                        <span>Brush</span>
                     </li>
-                    <li class="option">
+                    <li class="option tool" id="eraser">
                         <img src="icons/eraser.svg" alt="">
                         <span>Eraser</span>
                      </li>
                      <li class="option">
-                        <input type="range" id="size-slider">
+                        <input type="range" id="size-slider" min="1" max="30" value="5">
                      </li>
                 </ul>
              </div>
